# FakeDoom

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Notes.md  README.md  main.cpp
res/shaders/: basic.shader
scripts/: clean_build.sh  clean_build_release.sh  clean_build_without_exit.sh  execute_debug.sh  execute_debug_without_exit.sh  execute_release.sh  rebuild.sh  rebuild_without_exit.sh
src/: CMakeLists.txt
src/IndexBuffer/: CMakeLists.txt  IndexBuffer.cpp  IndexBuffer.h
src/Renderer/: CMakeLists.txt  Renderer.cpp  Renderer.h
src/Shader/: CMakeLists.txt  Shader.cpp  Shader.h
src/Texture/: CMakeLists.txt  Texture.cpp  Texture.h
src/VertexArray/: CMakeLists.txt  VertexArray.cpp  VertexArray.h
src/VertexBuffer/: CMakeLists.txt  VertexBuffer.cpp  VertexBuffer.h
src/VertexBufferLayout/: CMakeLists.txt  VertexBufferLayout.cpp  VertexBufferLayout.h
src/utils/: CMakeLists.txt
src/utils/functions/: CMakeLists.txt  functions.cpp  functions.h
